functional sessions check

--- a/html/index.html
+++ b/html/index.html
@@ -6,10 +6,7 @@
     <title>CMS</title>
 </head>
 <body>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam, amet optio enim reiciendis nulla. Accusantium iure sapiente amet iste, deserunt provident laudantium sint iusto necessitatibus eum, facere dolorem eaque.
-    Repudiandae totam at inventore sit eaque nam illo non accusantium mollitia nostrum ut, delectus animi quisquam eius voluptate perferendis recusandae maiores! Amet cumque beatae enim. Earum accusantium qui quas voluptatibus?
-    Sint explicabo voluptas dolorum incidunt, excepturi laboriosam quisquam iusto aperiam harum maxime unde repudiandae cumque maiores ipsam exercitationem at quasi ipsa fugiat. Atque ducimus esse magni quo pariatur nihil molestias.
-    Sunt laudantium vel hic quaerat quae praesentium est a eveniet unde soluta harum ullam, esse explicabo nobis accusamus! Ut sint ipsum quos nostrum consequatur maiores dolor quam eveniet? Nihil, facere?
-    Alias temporibus consequatur odio id velit ipsa sint natus, aperiam unde amet? Qui architecto reiciendis, placeat laudantium error perspiciatis illum vero eligendi quibusdam nemo nesciunt praesentium officia doloribus ipsa at?
+   <h1>403 Forbidden</h1><br>
+   <a href="../php/index.php">Powrót na stronę główną</a>
 </body>
 </html>
